src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <formula>Account.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Balance__c</fullName>
        <label>Account Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Accounting_Notes__c</fullName>
        <description>This field gives Accounting the ability to create a note on the member account that will display in the restaurant POS</description>
        <inlineHelpText>Accounting should use this field to set a note on the Member&apos;s account for other users to see.</inlineHelpText>
        <label>Accounting Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active_Guest_Pass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the member has an active guest pass.</description>
        <label>Active Guest Pass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF ( OR ( MONTH ( Birthdate ) &gt; MONTH (TODAY()), AND( MONTH ( Birthdate ) = MONTH (TODAY()), DAY ( Birthdate ) &gt;= DAY (TODAY()+1))), YEAR (TODAY()) - YEAR ( Birthdate ) -1, YEAR (TODAY()) - YEAR ( Birthdate ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allergy__c</fullName>
        <label>Allergy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anniversary_Date__c</fullName>
        <label>Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bill_To_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Bill To Member)</relationshipLabel>
        <relationshipName>ContactBillTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Email__c</fullName>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_Supplements__c</fullName>
        <label>Billing Supplements</label>
        <picklist>
            <picklistValues>
                <fullName>1027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1031</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1028</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Board_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify a member who serves on the board of directors</description>
        <label>Board Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_email__c</fullName>
        <label>Business email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Cabana_Number__c</fullName>
        <label>Cabana Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Amount__c</fullName>
        <label>Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Committee_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Identify member&apos;s who serve on a committee</description>
        <label>Committee Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Committee__c</fullName>
        <description>List of Committees that members serve on</description>
        <label>Committees</label>
        <picklist>
            <controllingField>Committee_Member__c</controllingField>
            <picklistValues>
                <fullName>Membership Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ForeTees Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Committee</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_Date__c</fullName>
        <label>Converted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Year_Banquet_Spend__c</fullName>
        <label>Current Year Banquet Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Year_Food_Beverage_Spend__c</fullName>
        <label>Current Year Food &amp; Beverage Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <label>Member Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>field for employee recordtype</description>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf Course Maintenance</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Charge_Late_Fees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Charge Late Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <label>Employee Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Title__c</fullName>
        <label>Employee Title</label>
        <picklist>
            <picklistValues>
                <fullName>Banquet Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Busser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cart Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shift manager</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employee_Type__c</fullName>
        <label>Employee Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leave of Absence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expulsion_Date__c</fullName>
        <label>Expulsion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expulsion_Reason__c</fullName>
        <label>Expulsion Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FT_Photo_URL__c</fullName>
        <description>URL for member photo</description>
        <label>FT Photo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Member_Name__c</fullName>
        <formula>FirstName +&quot; &quot;+ LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Guest_Type__c</fullName>
        <description>store type of the guest</description>
        <label>Guest Type</label>
        <picklist>
            <picklistValues>
                <fullName>Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospective Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reciprocal Club</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Reciprocal Club Member</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hold_Dues_Reason__c</fullName>
        <description>the reason of holding</description>
        <label>Hold Dues Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hold_Dues__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if checked hold from dues generation process</description>
        <label>Hold Dues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Club_Member_ID__c</fullName>
        <label>Home Club Member ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IF(Photo_Attachment_Id__c != null , IMAGE( &quot;/servlet/servlet.FileDownload?file=&quot;+Photo_Attachment_Id__c , &apos;&apos; , 100 , 100 ) , IMAGE(&apos;&apos; , &apos;&apos; , 0 , 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intended_Join_Date__c</fullName>
        <label>Intended Join Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intended_Membership_Type__c</fullName>
        <label>Intended Membership Type</label>
        <picklist>
            <picklistValues>
                <fullName>Membership Type 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership Type 2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Join_Date__c</fullName>
        <label>Join Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Aging_Effective_Date_Dev__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>This field is used for development purpose</description>
        <label>Last Aging Effective Date Dev</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Aging_Effective_Date__c</fullName>
        <formula>Last_Aging_Effective_Date_Dev__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Aging Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Leave_of_Absence_Expiration_Date__c</fullName>
        <label>Leave of Absence Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Liability_Waiver_Signed_Date__c</fullName>
        <label>Liability Waiver Signed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Liability_Waiver_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Liability Waiver Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locker_Combination__c</fullName>
        <description>To Track the locker combinations on a member</description>
        <label>Locker Combination</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maiden_Name__c</fullName>
        <label>Maiden Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widowed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member_Email_Groups_ForeTees__c</fullName>
        <description>This field is synced with ForeTees to populate the groups that are available. Users should NOT edit the groups in Salesforce, that is to be controlled via ForeTees. In Salesforce, users should only be updating which members belong to each group.</description>
        <label>Member Email Groups</label>
        <picklist>
            <picklistValues>
                <fullName>Wine Lovers</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Member_Photo__c</fullName>
        <formula>HYPERLINK(FT_Photo_URL__c,IMAGE(FT_Photo_URL__c,&quot;photo&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Photo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Age__c</fullName>
        <formula>IF ( OR ( MONTH ( Join_Date__c ) &gt; MONTH (TODAY()), AND( MONTH ( Join_Date__c ) = MONTH (TODAY()), DAY ( Join_Date__c ) &gt;= DAY (TODAY()+1))), YEAR (TODAY()) - YEAR ( Join_Date__c ) -1, YEAR (TODAY()) - YEAR ( Join_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Membership Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Start_Date__c</fullName>
        <label>Membership Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Type__c</fullName>
        <label>Membership Type</label>
        <picklist>
            <picklistValues>
                <fullName>Legacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athletic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Status__c</fullName>
        <label>New Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Substatus__c</fullName>
        <label>New Substatus</label>
        <picklist>
            <controllingField>New_Status__c</controllingField>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinstated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restrict from POS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leave of Absence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expelled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps?</label>
        <picklist>
            <picklistValues>
                <fullName>Step 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Club_Memberships__c</fullName>
        <label>Other Club Memberships</label>
        <picklist>
            <picklistValues>
                <fullName>Club 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club 3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Photo_Attachment_Id__c</fullName>
        <label>Photo Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Method_Of_Contact__c</fullName>
        <label>Preferred Method Of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Home Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax #</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchase_Category__c</fullName>
        <description>field for vendor recordtype</description>
        <label>Purchase Category</label>
        <picklist>
            <picklistValues>
                <fullName>Category 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category 3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_For_Contacting_The_Club__c</fullName>
        <description>fill reason for contacting the club</description>
        <label>Reason For Contacting The Club</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_For_Termination__c</fullName>
        <label>Reason For Termination</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Suspension__c</fullName>
        <label>Reason for Suspension</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_leaving__c</fullName>
        <label>Reason For Resignation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Red_Account_Comments__c</fullName>
        <label>Red Account Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Red_Account_Date__c</fullName>
        <label>Red Account Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Red_Account_Details__c</fullName>
        <label>Red Account Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Red_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Red Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred By</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Member</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Referred By)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reinstatement_Date__c</fullName>
        <label>Reinstatement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <globalPicklist>Relationship</globalPicklist>
        <label>Relationship</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resignation_Date__c</fullName>
        <label>Resignation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Son</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wife</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Husband</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Search_Contacts_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Searching the Contacts</description>
        <label>Search Contacts</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Search Contacts)</relationshipLabel>
        <relationshipName>Contacts4_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Signature_Attachment_Id__c</fullName>
        <label>Signature Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_1_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor 1 Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Sponsor 1 Name)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsor_2_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor 2 Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Sponsor 2 Name)</relationshipLabel>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsor_3_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor 3 Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Sponsor 3 Name)</relationshipLabel>
        <relationshipName>Contacts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Spouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Spouse</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Spouse</relationshipLabel>
        <relationshipName>Spouse</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage?</label>
        <picklist>
            <picklistValues>
                <fullName>Stage 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Change_Date__c</fullName>
        <label>Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <globalPicklist>Status</globalPicklist>
        <label>Status</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Substatus__c</fullName>
        <label>Substatus</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinstated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restrict from POS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leave of Absence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expelled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suspension_Date__c</fullName>
        <label>Suspension Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt_Number__c</fullName>
        <label>Tax Exempt Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Exempt?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tour By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Toured_Member</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tour_Comments__c</fullName>
        <label>Tour Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_Date__c</fullName>
        <label>Tour Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Type 1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VIP_Details__c</fullName>
        <label>VIP Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Fax__c</fullName>
        <label>Work Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>X0_30_Days__c</fullName>
        <description>Represents current month balance</description>
        <label>0-30 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1099_Type__c</fullName>
        <description>field for vendor recordtype</description>
        <label>1099 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X120_days__c</fullName>
        <label>120+ days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X31_60_Days__c</fullName>
        <label>31-60 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X61_90_Days__c</fullName>
        <label>61- 90 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
</CustomObject>